# mo420-branch-and-cut

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  globais.hpp  main.cpp  model.lp  run1.py  run2.py  run3.py  run4.py  run5.py  run6.py  run7.py  toy.txt
inc/: graph.h  include.h  model.h
results/00000/instances/: Spd_RF2_100_114_1811.txt  Spd_RF2_100_114_1819.txt  Spd_RF2_100_114_1827.txt  Spd_RF2_100_114_1835.txt  Spd_RF2_100_114_1843.txt  Spd_RF2_100_129_1851.txt  Spd_RF2_100_129_1859.txt  Spd_RF2_100_129_1867.txt  Spd_RF2_100_129_1875.txt  Spd_RF2_100_129_1883.txt  Spd_RF2_100_144_1891.txt  Spd_RF2_100_144_1899.txt  Spd_RF2_100_144_1907.txt  Spd_RF2_100_144_1915.txt  Spd_RF2_100_144_1923.txt  Spd_RF2_100_159_1931.txt  Spd_RF2_100_159_1939.txt  Spd_RF2_100_159_1947.txt  Spd_RF2_100_159_1955.txt  Spd_RF2_100_159_1963.txt  Spd_RF2_100_174_1971.txt  Spd_RF2_100_174_1979.txt  Spd_RF2_100_174_1987.txt  Spd_RF2_100_174_1995.txt  Spd_RF2_100_174_2003.txt  Spd_RF2_120_136_2211.txt  Spd_RF2_120_136_2219.txt  Spd_RF2_120_136_2235.txt  Spd_RF2_120_136_2243.txt  Spd_RF2_120_152_2251.txt  Spd_RF2_120_152_2259.txt  Spd_RF2_120_152_2267.txt  Spd_RF2_120_152_2275.txt  Spd_RF2_120_152_2283.txt  Spd_RF2_120_169_2291.txt  Spd_RF2_120_169_2299.txt  Spd_RF2_120_169_2315.txt  Spd_RF2_120_169_2323.txt  Spd_RF2_120_185_2331.txt  Spd_RF2_120_185_2339.txt  (+228 more)
results/00100/instances/: Spd_RF2_100_114_1819.txt  Spd_RF2_100_129_1851.txt  Spd_RF2_100_144_1907.txt  Spd_RF2_100_159_1931.txt  Spd_RF2_100_159_1947.txt  Spd_RF2_100_159_1963.txt  (+143 more)
src/: graph.cpp  model.cpp
(+1022 files in other folders)
